Fixed text alignement

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    text-align: center;
     width: 100%;
     height: 100%;
     flex-direction: column;
